Modulo Spring | Correcion - Concesionaria de autos, usar dos DTOs (entrada y salida)